--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - 0001-Make-load_lib-CONDA_PREFIX-aware.patch
 
 build:
-  number: 0
+  number: 1
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv "
   ignore_run_exports:
     - gmp  # [not win]
@@ -27,6 +27,9 @@ requirements:
     - python
     - gmp   # [not win]
 test:
+  requires:
+    - pytest
+    - pip
   imports:
     - Crypto
     - Crypto.Cipher
