--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,8 @@ requirements:
     - pip
     - python
     - gmp   # [not win]
+    - setuptools
+    - wheel
   run:
     - python
     - gmp   # [not win]
@@ -33,6 +35,8 @@ test:
   requires:
     - pytest
     - pip
+  commands:
+    - pip check
   imports:
     - Crypto
     - Crypto.Cipher
@@ -57,7 +61,7 @@ test:
 
 about:
   home: http://www.pycryptodome.org
-  license: BSD
+  license: BSD-2-Clause
   license_family: BSD
   license_file: LICENSE.rst
   summary: Cryptographic library for Python
