--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
+  script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv --no-build-isolation
   ignore_run_exports:
     - gmp  # [not win]
 
@@ -22,7 +22,7 @@ requirements:
     - {{ compiler('c') }}
     - m2-patch  # [win]
     - patch  # [not win]
-    - git
+    - git    # [not win]
   host:
     - pip
     - python
@@ -67,6 +67,8 @@ about:
   license_family: BSD
   license_file: LICENSE.rst
   summary: Cryptographic library for Python
+  description: |
+    PyCryptodome is a self-contained Python package of low-level cryptographic primitives. PyCryptodome is not a wrapper to a separate C library like OpenSSL. To the largest possible extent, algorithms are implemented in pure Python. Only the pieces that are extremely critical to performance (e.g. block ciphers) are implemented as C extensions.
   doc_url: https://www.pycryptodome.org/en/latest/
   dev_url: https://github.com/Legrandin/pycryptodome
 
